#56, #76: Added client support for locking / unlocking a resource.