@@ -9,12 +9,15 @@
  * Changes: see subversion log.
  *-----------------------------------------------------------------------------
  */
-package ccc.contentcreator.client;
+package ccc.contentcreator.api;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
 
 import com.extjs.gxt.ui.client.data.ModelData;
+import com.google.gwt.json.client.JSONArray;
 import com.google.gwt.json.client.JSONBoolean;
 import com.google.gwt.json.client.JSONNull;
 import com.google.gwt.json.client.JSONNumber;
@@ -34,11 +37,17 @@ public class JsonModelData
 
     private final JSONObject _object;
 
-    JsonModelData(final JSONObject object) {
+    /**
+     * Constructor.
+     *
+     * @param object The JSONObject that backs this model data.
+     */
+    public JsonModelData(final JSONObject object) {
         _object = object;
     }
 
     /** {@inheritDoc} */
+    @SuppressWarnings("unchecked")
     public <X> X get(final String property) {
         final JSONValue value = _object.get(property);
 
@@ -47,9 +56,9 @@ public class JsonModelData
         } else if (null != value.isNull()) {
             return null;
         } else if (null != value.isNumber()) {
-            return (X) new Double(value.isNumber().doubleValue());
+            return (X) Double.valueOf(value.isNumber().doubleValue());
         } else if (null != value.isBoolean()) {
-            return (X) new Boolean(value.isBoolean().booleanValue());
+            return (X) Boolean.valueOf(value.isBoolean().booleanValue());
         } else if (null != value.isString()) {
             return (X) value.isString().stringValue();
         } else { // Array or Object
@@ -74,6 +83,7 @@ public class JsonModelData
     }
 
     /** {@inheritDoc} */
+    @SuppressWarnings("boxing")
     public <X> X set(final String property, final X value) {
         final X oldValue = this.<X>get(property);
 
@@ -81,13 +91,13 @@ public class JsonModelData
             _object.put(property, JSONNull.getInstance());
             return oldValue;
         } else if (value instanceof Double) {
-            _object.put(property, new JSONNumber((Double)value));
+            _object.put(property, new JSONNumber((Double) value));
             return oldValue;
         } else if (value instanceof Boolean) {
-            _object.put(property, JSONBoolean.getInstance((Boolean)value));
+            _object.put(property, JSONBoolean.getInstance((Boolean) value));
             return oldValue;
         } else if (value instanceof String) {
-            _object.put(property, new JSONString((String)value));
+            _object.put(property, new JSONString((String) value));
             return oldValue;
         } else {
             throw new UnsupportedOperationException(
@@ -95,4 +105,28 @@ public class JsonModelData
         }
     }
 
+    /**
+     * TODO: Add a description of this method.
+     *
+     * @param jsonValue
+     * @return
+     */
+    public static final List<JsonModelData> fromArray(final JSONValue jsonValue) {
+        final List<JsonModelData> modelData = new ArrayList<JsonModelData>();
+        final JSONArray array = jsonValue.isArray();
+        for (int i=0; i<array.size(); i++) {
+            modelData.add(fromObject(array.get(i)));
+        }
+        return modelData;
+    }
+
+    /**
+     * TODO: Add a description of this method.
+     *
+     * @param jsonValue
+     * @return
+     */
+    public static final JsonModelData fromObject(final JSONValue jsonValue) {
+        return new JsonModelData(jsonValue.isObject());
+    }
 }
